Complete initial stage of project